# LearnCMake

./: README.md
step-1/: CMakeLists.txt  main.cpp
step-1/.cache/clangd/index/: main.cpp.353D904EC1AB0319.idx
step-2/: CMakeLists.txt  main.cpp
step-2/headers/: LearnCMakeConfig.h.in
template/: main.cpp
